[gd_scene load_steps=16 format=4 uid="uid://ds1ri7vmsu0tc"]

[ext_resource type="Script" path="res://scripts/intro_boat.gd" id="1_ujvt1"]
[ext_resource type="Texture2D" uid="uid://cncucmcomt5ip" path="res://assets/temp/testboat_boat_texture.png" id="2_vnsuc"]
[ext_resource type="FontFile" uid="uid://vrrmdx83skor" path="res://addons/dialogic/Example Assets/Fonts/Roboto-Regular.ttf" id="4_ihuag"]
[ext_resource type="AudioStream" uid="uid://5aqe7n8b41eo" path="res://assets/sounds/boat_open.wav" id="5_a5w4e"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ndv2m"]
resource_name = "Material.001"
cull_mode = 2
no_depth_test = true
albedo_texture = ExtResource("2_vnsuc")
texture_filter = 2

[sub_resource type="ArrayMesh" id="ArrayMesh_caisc"]
_surfaces = [{
"aabb": AABB(-1.18125, -0.424948, -0.590625, 2.3625, 1.125, 1.18125),
"format": 34896613377,
"index_count": 372,
"index_data": PackedByteArray("CAADAAEACAAJAAMACQAHAAMACQAKAAcACgAFAAcACgALAAUACwABAAUACwAIAAEAAgAEAAYAAgAAAAQAAwABAAEAAwADAAEACQAKAAoACQAJAAoADAAPAA8ADAAMAA8ADgANAA0ADgAOAA0ACgALAAsACgAKAAsAFAAMAA8AFAAVAAwAFQANAAwAFQAWAA0AFgAOAA0AFgAXAA4AFwAPAA4AFwAUAA8ABAATABIABAAAABMABgASABEABgAEABIAAgARABAAAgAGABEAAAAQABMAAAACABAAFwAnABQAFwAkACcAFQAiABYAFQAgACIAEgAjABEAEgAlACMAEAAmABMAEAAhACYADQAdAAwADQAeAB0ADwAfAA4ADwAYAB8ACgAaAAsACgAbABoACAAcAAkACAAZABwADwAOAA4ADwAPAA4ACwAIAAgACwALAAgADQAMAAwADQANAAwACAAJAAkACAAIAAkAHwAZABoAHwAYABkAHgAaABsAHgAfABoAHQAbABwAHQAeABsAGAAcABkAGAAdABwACQAbAAoACQAcABsACwAZAAgACwAaABkADgAeAA0ADgAfAB4ADAAYAA8ADAAdABgAJQAnACQAJQAmACcAIwAkACIAIwAlACQAIQAiACAAIQAjACIAJgAgACcAJgAhACAAEQAhABAAEQAjACEAFAAgABUAFAAnACAAEwAlABIAEwAmACUAFgAkABcAFgAiACQABQAHAAcABQAFAAcAAQAFAAUAAQABAAUABwADAAMABwAHAAMABQAHAAcABQAFAAcAAQArAAUAAQAoACsAAwABAAEAAwADAAEAAQAFAAUAAQABAAUABwADAAMABwAHAAMAKAAvACsAKAAsAC8ABwApAAMABwAqACkABQAqAAcABQArACoAAwAoAAEAAwApACgALgAsAC0ALgAvACwAKgAtACkAKgAuAC0AKwAuACoAKwAvAC4AKQAsACgAKQAtACwA"),
"name": "Material.001",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 48,
"vertex_data": PackedByteArray("GAYAAOb5AAAYBv//5vkAABgGAAAYBgAAGAb//xgGAADm+QAA5vkAAOb5///m+QAA5vkAABgGAADm+f//GAYAABgGzMzm+QAAGAbMzBgGAADm+czMGAYAAOb5zMzm+QAAGAbWoxgGAADm+dajGAYAAOb51qPm+QAAGAbWo+b5AAAYBpMYGAYAAOb5kxgYBgAA5vmTGOb5AAAYBpMY5vkAABgGWkLm+QAAGAZaQhgGAADm+VpCGAYAAOb5WkLm+QAAAADQov//AAAAANLN//8AAP//0s3//wAA///SzQAAAAAAANLNAAAAAAAA0KIAAAAA///QogAAAAD//9Ci//8AAAAAZkMAAAAAAACHFwAAAAD//2ZDAAAAAP//hxcAAAAA//9mQ///AAD//4cX//8AAAAAhxf//wAAAABmQ///AACVDf//5uoAAJUN//8YFQAAafL//xgVAABp8v//5uoAAJUNTBbm6gAAlQ1MFhgVAABp8kwWGBUAAGnyTBbm6gAA")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_8k40x"]
resource_name = "testboat_Cube_003"
_surfaces = [{
"aabb": AABB(-1.18125, -0.424948, -0.590625, 2.3625, 1.125, 1.18125),
"attribute_data": PackedByteArray("YCL8TQYw/KX0WvxR3nL/KRXb+/0SkOWuYCIAJgJY/KXRYgMC3nL8UavZA1YSkOWuBjADVvRaAwKC3fxRFdsCrhKQ5a7YZvxRAlgDVtFi/FGC3f8pq9n8pRKQ5a7YZv8p3Xr/KRTj+/0MjN+q3Xr8UarhA1YMjN+qquH8pQyM36rXbv8pFOMCrgyM36rXbvxRI7HmVtTHAq4MjOWu1Mf7/QyM5a5kxOkuzsP7/QyM5a5kxOZWI7HpLs7DAq4MjOWuNyYAJv8q+/v7XgMC/yr7+/8qAqz/KgKs+178UavZ/ykDAwKsAwMCrB1XAwKr2fxRNyb8TQMD+/sdV/xRAwP7+17A6S6TtAKuAwMDVAMDA1RewOZWDtcCrv8qA1T/KgNU/yr8ow7X+/3/KvyjntPpLgMD/KOTtPv9AwP8o57T5lYGMfv7DIzlrgYx+/sJXwKsDIzfqglfAqwJX/v7CV/7+wyM36oFh/v7BYf7+wyM36oFhwKsDIzfqgWHAqwCWfv7DIzlrgJZ+/sCWQKsAlkCrAyM5a4GMQKsBjECrAyM5a6iF/xNBjD7/fzxAqoGMPv9Wh78TbP4AqoJXgKqCV4Cqgle+/2z+Pv9CV77/ZsTACQFiPv9SfcDUgWI+/2bE/xNWh4AJEn3/KUFiAKqBYgCqqIXACQCWvv9kvD8pQJa+/0CWgKqAloCqpLwA1LkDPxNBjACqgYwAqr88fv95AwAJL6FACiL7Pyl/ysDUv8rA1LkfgAo/yv7/bHl/KX/K/v9/yv8pYvsA1L/K/yl3Qj8Tf8rAqr/KwKqseUDUgMC/E0DAvyl9e37/QMC/KXdCAAkAwICqgMCAqob5/v9AwIAJOR+/FEDAvv9G+cCqgMC+/2+hfxR9e0CqgMCA1IDAgNSEpDlrhKQ5a4SkOWuEpDlrgleA1YSkOWuBYYDVhKQ5a4FhvylEpDlrgle/KUSkOWuDIzssn9geFgGMHstDIr8pZCDeFgXU3stDIplMgyK7VqQg4ejHa1lMgyM+/1/YIejjbDsspSy7VoGMPxRja78paTV7VoXU/xRDIrmVo2u7Vqk1fylHa3mVo2w+/2Usvyl"),
"format": 34896613399,
"index_count": 372,
"index_data": PackedByteArray("GAAJAAMAGAAbAAkAHAAVAAoAHAAeABUAIAARABcAIAAjABEAIQAEAA8AIQAZAAQABwAMABIABwABAAwACwCoAAUACwCpAKgAHQBbAB8AHQBdAFsAJgBRAC8AJgBgAFEAKwBkACgAKwBnAGQAHwBYACIAHwBbAFgAQAAkAC0AQABEACQARQAnACUARQBJACcASwAsACkASwBPACwATQAuACoATQBBAC4ADQA+ADoADQACAD4AFAA7ADcAFAAOADsACAA2ADIACAATADYAAAAwADwAAAAGADAATgCmAEIATgCaAKYARgCSAEoARgCKAJIAOACUADQAOACcAJQAMwCjAD8AMwCPAKMAYwB9AF8AYwCBAH0AUACFAGYAUABpAIUAWQBwAFYAWQB0AHAAVQB7AF4AVQBvAHsALwBnACsALwBRAGcAIgBUABoAIgBYAFQAKABgACYAKABkAGAAGgBdAB0AGgBUAF0AhgBtAHEAhgBqAG0AgwBzAHcAgwCHAHMAfgB1AHkAfgCCAHUAaAB4AGwAaAB8AHgAXAB2AFoAXAB6AHYAVwBuAFMAVwByAG4AZQCAAGIAZQCEAIAAYQBrAFIAYQB/AGsAngClAJkAngCiAKUAlwCbAJMAlwCfAJsAjgCRAIkAjgCWAJEAoACIAKQAoACMAIgANQCNADEANQCVAI0AQwCLAEcAQwCnAIsAPQCdADkAPQChAJ0ASACYAEwASACQAJgAqwCxAKoAqwCzALEABQCrABAABQCoAKsAFgCpAAsAFgCqAKkAEACqABYAEACrAKoArAC/ALIArAC1AL8AqQCtAKgAqQCvAK0AqACzAKsAqACtALMAqgCvAKkAqgCxAK8AtADKAL4AtADAAMoAsAC4AK4AsAC8ALgAsgC8ALAAsgC/ALwArgC1AKwArgC4ALUAyADBAMQAyADLAMEAuwDDALcAuwDHAMMAvQDGALoAvQDJAMYAuQDCALYAuQDFAMIA"),
"material": SubResource("StandardMaterial3D_ndv2m"),
"name": "Material.001",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 204,
"vertex_data": PackedByteArray("GAYAAOb5VNUYBgAA5vlU1RgGAADm+f+/GAb//+b5VNUYBv//5vn/vxgG///m+f+/GAYAABgGVNUYBgAAGAZU1RgGAAAYBv//GAb//xgGVNUYBv//GAb//xgG//8YBv+/5vkAAOb5VNXm+QAA5vn/v+b5AADm+VTV5vn//+b5/7/m+f//5vn/v+b5///m+VTV5vkAABgGVNXm+QAAGAb//+b5AAAYBlTV5vn//xgG///m+f//GAb/v+b5//8YBlTVGAbMzOb5VNUYBszM5vn/vxgGzMzm+f+/GAbMzBgGVNUYBszMGAb//xgGzMwYBv+/5vnMzBgG///m+czMGAb/v+b5zMwYBlTV5vnMzOb5/7/m+czM5vn/v+b5zMzm+VTVGAbWoxgGVNUYBtajGAb//xgG1qMYBv+/5vnWoxgG///m+dajGAb/v+b51qMYBlTV5vnWo+b5/7/m+daj5vn/v+b51qPm+VTVGAbWo+b5VNUYBtaj5vn/vxgG1qPm+f+/GAaTGBgGVNUYBpMYGAai0RgGkxgYBv//GAaTGBgGcdPm+ZMYGAZF1+b5kxgYBqLR5vmTGBgG///m+ZMYGAZU1eb5kxjm+UXX5vmTGOb5O9nm+ZMY5vn/v+b5kxjm+VTVGAaTGOb5VNUYBpMY5vk72RgGkxjm+f+/GAaTGOb5cdMYBlpC5vlU1RgGWkLm+f+/GAZaQub5O9kYBlpC5vlx0xgGWkIYBlTVGAZaQhgG//8YBlpCGAai0RgGWkIYBnHT5vlaQhgGRdfm+VpCGAb//+b5WkIYBqHR5vlaQhgGVNXm+VpC5vlF1+b5WkLm+f+/5vlaQub5O9nm+VpC5vlU1RgG1qPm+SfZGAbWo+b5/78YBtaj5vl60xgGzMzm+SfZGAbMzOb5/78YBszM5vl60+b5zMzm+TvX5vnMzOb5J9nm+czM5vn/v+b5zMwYBjvX5vnMzBgGs9Hm+czMGAb/vxgGzMwYBrPRGAbMzBgG/78YBszMGAZ60xgG1qMYBrPRGAbWoxgG/78YBtajGAZ60+b51qMYBjvX5vnWoxgGs9Hm+dajGAb/v+b51qPm+TvX5vnWo+b5J9nm+daj5vn/vwAA0KL//1TVAADQov//J9kAANCi////vwAA0KL//3rTAADSzf//VNUAANLN////vwAA0s3//yfZAADSzf//etP//9LN//871///0s3///+////Szf//J9n//9LN//9U1f//0s0AADvX///SzQAA/////9LNAACz0f//0s0AAFTVAADSzQAAVNUAANLNAAD//wAA0s0AALPRAADSzQAAetMAANCiAABU1QAA0KIAALPRAADQogAA//8AANCiAAB60///0KIAADvX///QogAAs9H//9CiAAD/////0KIAAFTV///Qov//O9f//9Ci//8n2f//0KL///+////Qov//VNUAAGZDAABU1QAAZkMAAP//AABmQwAAotEAAGZDAABx0wAAhxcAAFTVAACHFwAAotEAAIcXAAD//wAAhxcAAHHT//9mQwAARdf//2ZDAAD/////ZkMAAKHR//9mQwAAVNX//4cXAABF1///hxcAAKLR//+HFwAA/////4cXAABU1f//ZkP//0XX//9mQ////7///2ZD//872f//ZkP//1TV//+HF///Rdf//4cX//872f//hxf///+///+HF///VNUAAIcX//9U1QAAhxf//zvZAACHF////78AAIcX//9x0wAAZkP//1TVAABmQ////78AAGZD//872QAAZkP//3HTGAb//+b5/78YBv//GAb/v+b5//8YBv+/5vn//+b5/78YBv//5vlU1RgG///m+f+/GAb//xgGVNUYBv//GAb/v+b5//8YBlTV5vn//xgG/7/m+f//5vlU1eb5///m+f+/lQ3//+bq//+VDf//5upU1ZUN///m6v+/lQ3//xgV/7+VDf//GBVU1ZUN//8YFf+/afL//xgV/79p8v//GBX/v2ny//8YFVTVafL//+bq/79p8v//5ur//2ny///m6lTVlQ1MFubq//+VDUwW5upU1ZUNTBbm6v+/lQ1MFhgV/7+VDUwWGBVU1ZUNTBYYFf+/afJMFhgV/79p8kwWGBX/v2nyTBYYFVTVafJMFubq/79p8kwW5ur//2nyTBbm6lTVVNVU1VRVVFX/f/9/VFWqqv9//3////9/VNVU1VRVVFX/P/+/VFWqqv8//7////9/VFVUVf9//3+qqlRV/3//f////3+qqlRVVFVUVf8//7+qqlRV/z//v////3+qqlRVVFWqqv9//3////9/VFWqqv8//7////9//z//v////3+qqlRV/3//f////3+qqlRVVFWqqv8//7////9//z//v////3+qqlRV/////////3+qqlRVVFWqqv////////9/VNVU1bNXs1f/P/+/gVb7UjBUnlezV7NX/z//v6qqVFUwVJ5XFlMWU/9//3+qqlRVVNVU1RZTFlP/f/9/gVb7UlRVqqr/////FdPpLPvSfSlUVaqq/z//v7PXSyj70n0pndfPK/8//7+z10soqqpUVZ3Xzyv/////FdPpLKqqVFUhUyFT////f3tWB1Mg094s////fwfTgymS18krINPeLP///3+S18krp9dXKP///3+n11co////fwfTgymnV6dX////f3tWB1M2VJJXp1enV////382VJJXIVMhU////39U1VTVIVMhU/////97VgdTVNVU1f////8g094sB9ODKZLXySv/////INPeLKoqqiqS18kr/7//v6fXVyiqKqoqVNVU1f+//7+n11coB9ODKVTVVNWnV6dX/7//v3tWB1M2VJJXp1enV/+//7+qKqoqNlSSVyFTIVP/////qiqqKlTVVNX/v/+/s9dLKPvSfSlU1VTVs1ezV/+//7+BVvtSndfPK/+//7+z10soqiqqKjBUnlezV7NX/7//v6oqqiqd188r/////xXT6SyqKqoqMFSeVxZTFlP/////qiqqKlTVVNUWUxZT/////4FW+1JU1VTV/////xXT6Sz70n0p////f////3////9/////f1TVqir///9/VNWqKv///39U1aoq////f1TVqir///9//z//v1TVqir/fwAA/3//f1TVqir/fwAA/3////9//39U1aoq/3////8//79U1aoq/z//v1TVqir/fwAA/3//f1TVqir/fwAA/3////9//39U1aoq/3////8//79U1aoq")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_caisc")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bnu65"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_crlrs"]
load_path = "res://.godot/imported/testboat_boat_top_texture.png-5198a70b8a7129618a154db841d6fc4d.s3tc.ctex"

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_f1you"]
resource_name = "Material.002"
albedo_texture = SubResource("CompressedTexture2D_crlrs")
uv1_scale = Vector3(0.41, 0.41, 0.41)
texture_filter = 2

[sub_resource type="ArrayMesh" id="ArrayMesh_t2vxw"]
resource_name = "testboat_Cube_004"
_surfaces = [{
"aabb": AABB(-1.125, -0.03915, -0.5625, 2.25, 0.0783, 1.12501),
"attribute_data": PackedByteArray("f3KVHz7ilR9/chT/PuIU/9vrFP8U/1SPd/WVHxT/FP8U/3+N2+uVHxT/wB139RT/qnAU/xTkFP9N91SP6gAU/7DtlR9N9xT/Tfd/japwlR8U5JUfTffAHeoAlR+w7RT/"),
"format": 34896613399,
"index_count": 36,
"index_data": PackedByteArray("AQACAAAAAQADAAIACwAQAAYACwAXABAADAAWABMADAAPABYABAAUAAkABAANABQACAAVAAoACAASABUABwAOAAUABwARAA4A"),
"material": SubResource("StandardMaterial3D_f1you"),
"name": "Material.002",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 24,
"vertex_data": PackedByteArray("AAAAAP7/VNUAAAAAAABU1f//AAD+/1TV//8AAAAAVNUAAAAAAAD/vwAAAAAAAFTVAAAAAP7///8AAAAA/v9U1f//AAAAAFTV//8AAAAA/7///wAA/v9U1f//AAD+////AAD//wAAVNUAAP//AAD/vwAA//8AAFTVAAD///7/VNUAAP///v///wAA///+/1TV/////wAAVNX/////AABU1f////8AAP+///////7/VNX//////v9U1f/////+////VNWqKlTVqipU1aoqVNWqKv9//3+qqlRV/z//v6qqVFVUVaqq/3//f1RVqqr/P/+/VFVUVf9//3+qqlRVVFVUVf8//7+qqlRVVFWqqlRVVFX/f/9/VFWqqlRVVFX/P/+/")
}]
blend_shape_mode = 0

[sub_resource type="Animation" id="Animation_kdtyt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../boatTopMesh:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0.74, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../boatTopMesh:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../camAnchor:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-1.07, 0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../camAnchor:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(1.5708, -1.5708, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../introBoatAudio:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_xr50v"]
resource_name = "boat_exit"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../camAnchor:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(-2, 1),
"update": 0,
"values": [Vector3(-1.07, 0, 0), Vector3(-0.51145, 2.07527, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../camAnchor:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(-2, 1),
"update": 0,
"values": [Vector3(1.5708, -1.5708, 0), Vector3(-8.35187e-23, -1.5708, 4.37114e-08)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("..")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"introDone"
}]
}

[sub_resource type="Animation" id="Animation_ai43k"]
resource_name = "boat_open"
length = 1.2
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../boatTopMesh:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 0.65, 0.75, 1.2),
"transitions": PackedFloat32Array(1, 2, 1, 0.5, 1),
"update": 0,
"values": [Vector3(0, 0.74, 0), Vector3(0, 0.74, 1), Vector3(0, 0.521504, 1.0593), Vector3(0, 0.181954, 1.08044), Vector3(0, -0.654553, 1.965)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../boatTopMesh:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 0.65, 0.75, 1.2),
"transitions": PackedFloat32Array(1, 2, 1, 0.5, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, 0), Vector3(0.785398, 0, 0), Vector3(1.24815, 0, 0), Vector3(0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../introBoatAudio:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5, 0.65, 0.75, 1.2),
"transitions": PackedFloat32Array(1, 2, 1, 0.5, 1),
"update": 0,
"values": [Vector3(0, 0.79, 0), Vector3(0, 0.79, 1.00035), Vector3(0, 0.521504, 1.0593), Vector3(0, 0.181954, 1.08044), Vector3(0, -0.654553, 1.965)]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../introBoatAudio")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [0.0],
"method": &"play"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fe6vx"]
_data = {
"RESET": SubResource("Animation_kdtyt"),
"boat_exit": SubResource("Animation_xr50v"),
"boat_open": SubResource("Animation_ai43k")
}

[node name="introBoat" type="Node3D"]
script = ExtResource("1_ujvt1")

[node name="boatMesh" type="MeshInstance3D" parent="."]
transform = Transform3D(1.33, 0, 0, 0, 1.33, 0, 0, 0, 1.33, 0, -0.193, 0)
cast_shadow = 2
mesh = SubResource("ArrayMesh_8k40x")
skeleton = NodePath("")

[node name="camAnchor" type="Node3D" parent="."]
transform = Transform3D(-3.61999e-06, -1, 3.61999e-06, 0, -3.61999e-06, -1, 1, -3.61999e-06, 1.31043e-11, -1.07, 0, 0)

[node name="camNeck" type="Node3D" parent="camAnchor"]
transform = Transform3D(1, -1.42109e-14, -1.91069e-15, 0, 1, 0, -5.4634e-15, -1.42109e-14, 1, 0, 0, 0)

[node name="introCam" type="Camera3D" parent="camAnchor/camNeck"]
transform = Transform3D(1, 1.42109e-14, 1.06581e-14, 0, 1, 1.42109e-14, 0, -8.47033e-22, 1, 0, 0, 0)
current = true
fov = 90.0

[node name="introBlack" type="ColorRect" parent="camAnchor/camNeck/introCam"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="tutorialPrompts" type="Label" parent="camAnchor/camNeck/introCam"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = 0
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("4_ihuag")
theme_override_font_sizes/font_size = 18
theme_override_styles/normal = SubResource("StyleBoxEmpty_bnu65")
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="introRay" type="RayCast3D" parent="camAnchor/camNeck/introCam"]

[node name="boatTopMesh" type="MeshInstance3D" parent="."]
transform = Transform3D(1.33, 0, 0, 0, 1.33, 0, 0, 0, 1.33, 0, 0.74, 0)
cast_shadow = 2
mesh = SubResource("ArrayMesh_t2vxw")
skeleton = NodePath("")

[node name="boatAnim" type="AnimationPlayer" parent="."]
root_node = NodePath("../boatMesh")
libraries = {
"": SubResource("AnimationLibrary_fe6vx")
}

[node name="introBoatAudio" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("5_a5w4e")
bus = &"soundEffects"
